webpack image loaders and sass configurations

--- a/server/index.html
+++ b/server/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div id="app">This is index html</div>
+<a>i should be green </a>
 <script src="./bundle.js"></script>
 </body>
 </html>
