react install + loaders

--- a/server/index.html
+++ b/server/index.html
@@ -7,8 +7,7 @@
     <title>Test</title>
 </head>
 <body>
-<div id="app">This is index html</div>
-<a>i should be green if styles loaded</a>
-<script src="/bundle.js"></script>
+<div id="app"></div>
+<script src="bundle.js"></script>
 </body>
 </html>
